<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="icon">SunCloud</string>

    <string name="action_share">Share</string>

    <string name="location">Location</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_unit_label">Units</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_default" translatable="false">metric</string>

    <string-array name="listUnits">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string-array name="listUnitsVal">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>
